--- a/resources/styles.css
+++ b/resources/styles.css
@@ -1,13 +1,12 @@
 .background {
-
 }
 
 #myLabel {
-  font-size: 80;
-  font-family: System-Bold;
-  text-length: 32;
-  text-anchor: middle;
-  x: 50%;
-  y: 50%;
-  fill: white;
+    font-size: 80;
+    font-family: System-Bold;
+    text-length: 32;
+    text-anchor: middle;
+    x: 50%;
+    y: 50%;
+    fill: red;
 }
