--- a/resources/styles.css
+++ b/resources/styles.css
@@ -1,18 +1,74 @@
-#background {
-    x: 0;
-    y: 0;
+.screen {
     width: 100%;
     height: 100%;
     fill: #000000;
 }
 
+.header-section {
+    x: 50%-140;
+    y: 0;
+    width: 280;
+    height: 30%;
+}
+
+.main-section {
+    x: 50%-140;
+    y: 30%;
+    width: 280;
+    height: 40%;
+}
+
+.footer-section {
+    x: 50%-145;
+    y: 70%;
+    width: 280;
+    height: 30%;
+}
+
+.ring-section {
+    x: $+10;
+    y: 0;
+    width: 60;
+    height: 60;
+}
+
+.ring-item {
+    width: 100%;
+    height: 100%;
+    arc-width: 5;
+    sweep-angle:25;
+    fill: 'fb-extra-dark-gray';
+}
+
+.ring-item2 {
+    width: 100%;
+    height: 100%;
+    arc-width: 15;
+    sweep-angle:25;
+    fill: 'fb-extra-dark-gray';
+}
+
+.ring-item3 {
+    width: 100%;
+    height: 100%;
+    arc-width: 20;
+    sweep-angle:25;
+    fill: 'fb-extra-dark-gray';
+}
+
+.test {
+    width: 100%;
+    height: 100%;
+    fill: #005500;
+}
+
 .clock-text {
     font-family: Colfax-Light;
-    font-size: 105;
+    font-size: 90;
     text-anchor: middle;
     text-length: 10;
     x: 50%;
-    y: 50%-25;
+    y: 50%+30;
     width: 100%;
     height: 100%;
     fill: #FA1E43;
@@ -24,25 +80,10 @@
     text-anchor: middle;
     text-length: 32;
     x: 50%;
-    y: 50%+39;
+    y: 50%-70;
     width: 100%;
     height: 100%;
     fill: #FFFFFF;
-}
-
-.divider {
-    x: 50%-111;
-    width: 222;
-    height: 1;
-    fill: #646464;
-}
-
-.divider-top {
-    y: 50%;
-}
-
-.divider-btm {
-    y: 50%+59;
 }
 
 .stats {
