feat: extract progress to dedicated widget

--- a/resources/styles/styles.css
+++ b/resources/styles/styles.css
@@ -1,4 +1,4 @@
-/****[ screen ]************************************************************************/
+/****[ screen ]***************************************************************/
 .header {
     x: 50%-68;
     y: 0;
@@ -20,11 +20,11 @@
     height: 30%;
 }
 
-/****[ progress counter ]**************************************************************/
+/****[ progress counter ]*****************************************************/
 .progress-counter {
     font-family: System-Regular;
     font-size: 12;
-    text-length: 10;
+    text-length: 8;
     width: 40;
     height: 10;
     fill: fb-green;
@@ -42,29 +42,20 @@
     text-anchor: end;
 }
 
-/****[ progress bar ]******************************************************************/
-.progress-bar {
-    width: 20;
-    height: 100%;
-}
-
-.progress-bar.progress-bar-start {
+/****[ progress ]*************************************************************/
+.progress-start {
     x: 0;
     y: 15;
-}
-
-.progress-bar.progress-bar-end {
-    x: 100%-20;
-    y: 15;
-}
-
-.progress-bar rect {
-    y: $+2;
-    height: 10;
     fill: 'fb-extra-dark-gray';
 }
 
-/****[ rings ]*************************************************************************/
+.progress-stop {
+    x: 100%-20;
+    y: 15;
+    fill: 'fb-extra-dark-gray';
+}
+
+/****[ rings ]****************************************************************/
 .ring-sensor {
     x: $+10;
     y: 0;
@@ -78,7 +69,7 @@
     font-family: System-Regular;
     font-size: 12;
     text-anchor: middle;
-    text-length: 10;
+    text-length: 8;
     width: 100%;
     height: 10;
     fill: fb-green;
@@ -93,7 +84,7 @@
     fill: 'fb-extra-dark-gray';
 }
 
-/****[ time ]**************************************************************************/
+/****[ time ]*****************************************************************/
 .time-block {
     x: $;
     y: 0;
@@ -137,7 +128,7 @@
     fill: 'fb-extra-dark-gray';
 }
 
-/****[ date ]**************************************************************************/
+/****[ date ]*****************************************************************/
 .date-block {
     x: $;
     y: 0;
@@ -181,7 +172,7 @@
     fill: 'fb-extra-dark-gray';
 }
 
-/****[ test ]**************************************************************************/
+/****[ test ]*****************************************************************/
 .test {
     width: 100%;
     height: 100%;
@@ -192,7 +183,7 @@
     font-family: Colfax-Light;
     font-size: 90;
     text-anchor: middle;
-    text-length: 10;
+    text-length: 8;
     x: 50%;
     y: 50%+30;
     width: 100%;
