--- a/resources/styles/widgets.css
+++ b/resources/styles/widgets.css
@@ -1,4 +1,4 @@
-/****[ progress ]*************************************************************/
+/****[ progress ]******************************************************************************************************/
 #progress {
     width: 20;
     height: 100%;
@@ -7,5 +7,41 @@
 #progress rect {
     y: $+2;
     height: 10;
+    fill: 'inherit';
+}
+
+/****[ large-number ]**************************************************************************************************/
+#large-number {
+    width: 32;
+    height: 100%;
+}
+
+#large-number .digit-dot {
+    width: 5;
+    height: 5;
+    fill: 'inherit';
+}
+
+#large-number .digit-x-line {
+    width: 20;
+    height: 5;
+    fill: 'inherit';
+}
+
+#large-number .digit-y-line {
+    width: 5;
+    height: 20;
+    fill: 'inherit';
+}
+
+/****[ large-separator ]***********************************************************************************************/
+#large-separator {
+    width: 5;
+    height: 100%;
+}
+
+#large-separator .digit-dot {
+    width: 5;
+    height: 5;
     fill: 'inherit';
 }
