--- a/resources/styles/index.css
+++ b/resources/styles/index.css
@@ -91,48 +91,10 @@
     fill: 'fb-extra-dark-gray';
 }
 
-
 /****[ date ]*****************************************************************/
-.date-block {
-    x: $;
-    y: 0;
-    width: 30;
-    height: 100%;
-}
-
-.date-block .date-dot {
-    width: 4;
-    height: 4;
-    fill: 'fb-extra-dark-gray';
-}
-
-.date-block .date-x-line {
-    width: 16;
-    height: 4;
-    fill: 'fb-extra-dark-gray';
-}
-
-.date-block .date-y-line {
-    width: 4;
-    height: 16;
-    fill: 'fb-extra-dark-gray';
-}
-
-.date-block .date-placeholder {
-    width: 16;
-    height: 16;
-}
-
-.date-separator {
-    x: $;
-    y: 0;
-    width: 8;
-    height: 100%;
-}
-
-.date-separator .date-dash {
-    width: 4;
-    height: 4;
+.date-item {
+    x: $+4;
+    y: 20;
     fill: 'fb-extra-dark-gray';
 }
 
