--- a/resources/styles/index.css
+++ b/resources/styles/index.css
@@ -1,14 +1,14 @@
 /****[ screen ]***************************************************************/
 .header {
-    x: 50%-68;
+    x: 50%-58;
     y: 0;
-    width: 140;
+    width: 106;
     height: 30%;
 }
 
 .center {
-    x: 50%-77;
-    y: 30%;
+    x: 50%-80;
+    y: 50%-50;
     width: 160;
     height: 40%;
 }
@@ -20,38 +20,33 @@
     height: 30%;
 }
 
-/****[ progress counter ]*****************************************************/
-.progress-counter {
-    font-family: System-Regular;
-    font-size: 12;
-    text-length: 8;
-    width: 40;
-    height: 10;
-    fill: fb-green;
+.top-start {
+    x: 0;
+    y: 0;
 }
 
-.progress-counter.progress-counter-start {
-    x: 2;
-    y: 12;
-    text-anchor: start;
+.top-stop {
+    x: 100%-56;
+    y: 0;
 }
 
-.progress-counter.progress-counter-end {
-    x: 100%-2;
-    y: 12;
-    text-anchor: end;
+/****[ counter ]**************************************************************/
+.counter-item {
+    x: $+4;
+    y: 2;
+    fill: 'fb-extra-dark-gray';
 }
 
 /****[ progress ]*************************************************************/
 .progress-start {
     x: 0;
-    y: 15;
+    y: 35;
     fill: 'fb-extra-dark-gray';
 }
 
 .progress-stop {
     x: 100%-20;
-    y: 15;
+    y: 35;
     fill: 'fb-extra-dark-gray';
 }
 
@@ -64,8 +59,8 @@
 
 /****[ date ]*****************************************************************/
 .date-item {
-    x: $+4;
-    y: 20;
+    x: $+5;
+    y: 24;
     fill: 'fb-extra-dark-gray';
 }
 
@@ -74,12 +69,12 @@
     x: $+10;
     y: 0;
     width: 60;
-    height: 70;
+    height: 60;
 }
 
 .ring-sensor text {
     x: 50%;
-    y: 5;
+    y: 0;
     font-family: System-Regular;
     font-size: 16;
     text-anchor: middle;
