--- a/resources/styles/index.css
+++ b/resources/styles/index.css
@@ -75,7 +75,7 @@
 .ring-sensor text {
     x: 50%;
     y: 0;
-    font-family: System-Regular;
+    font-family: System-Bold;
     font-size: 16;
     text-anchor: middle;
     text-length: 8;
