chore: prepare app for publishing an FitBit Store

--- a/resources/styles/index.css
+++ b/resources/styles/index.css
@@ -1,4 +1,4 @@
-/****[ screen ]***************************************************************/
+/****[ screen ]********************************************************************************************************/
 .header {
     x: 50%-58;
     y: 0;
@@ -30,14 +30,14 @@
     y: 0;
 }
 
-/****[ counter ]**************************************************************/
+/****[ counter ]*******************************************************************************************************/
 .counter-item {
     x: $+4;
     y: 2;
     fill: 'fb-extra-dark-gray';
 }
 
-/****[ progress ]*************************************************************/
+/****[ progress ]******************************************************************************************************/
 .progress-start {
     x: 0;
     y: 35;
@@ -50,21 +50,20 @@
     fill: 'fb-extra-dark-gray';
 }
 
-/****[ time ]*****************************************************************/
-.time-item {
-    x: $+5;
-    y: 0;
-    fill: 'fb-extra-dark-gray';
-}
-
-/****[ date ]*****************************************************************/
+/****[ data-time ]*****************************************************************************************************/
 .date-item {
     x: $+5;
     y: 24;
     fill: 'fb-extra-dark-gray';
 }
 
-/****[ rings ]****************************************************************/
+.time-item {
+    x: $+5;
+    y: 0;
+    fill: 'fb-extra-dark-gray';
+}
+
+/****[ rings ]*********************************************************************************************************/
 .ring-sensor {
     x: $+10;
     y: 0;
@@ -87,82 +86,4 @@
 .ring-sensor .ring-item {
     y: 10;
     fill: 'fb-extra-dark-gray';
-}
-
-/****[ test ]*****************************************************************/
-.test {
-    width: 100%;
-    height: 100%;
-    fill: #FA1E43;
-}
-
-.clock-text {
-    font-family: Colfax-Light;
-    font-size: 90;
-    text-anchor: middle;
-    text-length: 8;
-    x: 50%;
-    y: 50%+30;
-    width: 100%;
-    height: 100%;
-    fill: #FA1E43;
-}
-
-.date-text {
-    font-family: Seville;
-    font-size: 26;
-    text-anchor: middle;
-    text-length: 32;
-    x: 50%;
-    y: 50%-70;
-    width: 100%;
-    height: 100%;
-    fill: #FFFFFF;
-}
-
-.stats {
-    x: 50%-111;
-    y: 50%+66;
-    width: 222;
-    height: 48;
-}
-
-.stats text {
-    font-family: SevilleSharp;
-    font-size: 30;
-    text-length: 16;
-    fill: #FFFFFF;
-}
-
-#iconHRM {
-    width: 24;
-    height: 24;
-    y: 15;
-    x: 1;
-    fill: #FF214A;
-}
-
-.stat-left {
-    x: 31;
-}
-
-.stat-right {
-    x: 100%;
-    width: 100%;
-    text-anchor: end
-}
-
-#stats-cycle {
-    x: 40%;
-    y: 0;
-    width: 60%;
-    height: 100%;
-}
-
-.cycle-item image {
-    x: 50%;
-    y: 15;
-    fill: #FFFFFF;
-    width: 24;
-    height: 24;
 }
