--- a/resources/styles/widgets.css
+++ b/resources/styles/widgets.css
@@ -84,7 +84,7 @@
     fill: 'inherit';
 }
 
-/****[ clock-2-dash ]*************************************************************************************************/
+/****[ clock-2-dash ]**************************************************************************************************/
 #clock-2-dash {
     width: 16;
     height: 100%;
