fix: minor UI and logic improvements before final release

--- a/resources/styles/index.css
+++ b/resources/styles/index.css
@@ -1,4 +1,4 @@
-/****[ screen ]********************************************************************************************************/
+/* screen */
 .header {
     x: 50%-58;
     y: 0;
@@ -30,14 +30,14 @@
     y: 0;
 }
 
-/****[ counter ]*******************************************************************************************************/
+/* counter */
 .counter-item {
     x: $+4;
     y: 2;
     fill: 'fb-extra-dark-gray';
 }
 
-/****[ progress ]******************************************************************************************************/
+/* progress */
 .progress-start {
     x: 0;
     y: 35;
@@ -50,7 +50,7 @@
     fill: 'fb-extra-dark-gray';
 }
 
-/****[ data-time ]*****************************************************************************************************/
+/* data-time */
 .date-item {
     x: $+5;
     y: 24;
@@ -63,15 +63,15 @@
     fill: 'fb-extra-dark-gray';
 }
 
-/****[ rings ]*********************************************************************************************************/
-.ring-sensor {
+/* sensor */
+.sensor {
     x: $+10;
     y: 0;
     width: 60;
     height: 60;
 }
 
-.ring-sensor text {
+.sensor text {
     x: 50%;
     y: 0;
     font-family: System-Bold;
@@ -83,7 +83,7 @@
     fill: fb-green;
 }
 
-.ring-sensor .ring-item {
+.sensor .ring-item {
     y: 10;
     fill: 'fb-extra-dark-gray';
 }
