--- a/resources/styles/widgets.css
+++ b/resources/styles/widgets.css
@@ -1,4 +1,4 @@
-/****[ progress ]******************************************************************************************************/
+/* progress */
 #progress {
     width: 20;
     height: 100%;
@@ -10,7 +10,7 @@
     fill: 'inherit';
 }
 
-/****[ sensor ]********************************************************************************************************/
+/* sensor */
 #sensor {
     width: 60;
     height: 60;
@@ -24,7 +24,7 @@
     fill: 'inherit';
 }
 
-/****[ clock-1-number ]************************************************************************************************/
+/* clock-1-number */
 #clock-1-number {
     width: 32;
     height: 60;
@@ -48,7 +48,7 @@
     fill: 'inherit';
 }
 
-/****[ clock-1-colon ]*************************************************************************************************/
+/* clock-1-colon */
 #clock-1-colon {
     width: 11;
     height: 60;
@@ -60,7 +60,7 @@
     fill: 'inherit';
 }
 
-/****[ clock-2-number ]************************************************************************************************/
+/* clock-2-number */
 #clock-2-number {
     width: 20;
     height: 37;
@@ -84,7 +84,7 @@
     fill: 'inherit';
 }
 
-/****[ clock-2-dash ]**************************************************************************************************/
+/* clock-2-dash */
 #clock-2-dash {
     width: 16;
     height: 100%;
@@ -96,7 +96,7 @@
     fill: 'inherit';
 }
 
-/****[ clock-3-number ]************************************************************************************************/
+/* clock-3-number */
 #clock-3-number {
     width: 14;
     height: 26;
